; ModuleID = '/home/carl/AnghaBench/sumatrapdf/ext/mujs/extr_jsparse.c_callexp.c'
source_filename = "/home/carl/AnghaBench/sumatrapdf/ext/mujs/extr_jsparse.c_callexp.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_9__ = type { i32 }

@MEMBER = common dso_local global i32 0, align 4
@INDEX = common dso_local global i32 0, align 4
@CALL = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (%struct.TYPE_9__*)* @callexp to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @callexp(%struct.TYPE_9__* %0) #0 {
  %2 = alloca %struct.TYPE_9__*, align 8
  %3 = alloca i32*, align 8
  %4 = alloca i32, align 4
  store %struct.TYPE_9__* %0, %struct.TYPE_9__** %2, align 8
  %5 = load %struct.TYPE_9__*, %struct.TYPE_9__** %2, align 8
  %6 = call i32* @newexp(%struct.TYPE_9__* %5)
  store i32* %6, i32** %3, align 8
  %7 = call i32 (...) @SAVEREC()
  br label %8

8:                                                ; preds = %38, %26, %16, %1
  %9 = call i32 (...) @INCREC()
  %10 = load %struct.TYPE_9__*, %struct.TYPE_9__** %2, align 8
  %11 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %10, i32 0, i32 0
  %12 = load i32, i32* %11, align 4
  store i32 %12, i32* %4, align 4
  %13 = load %struct.TYPE_9__*, %struct.TYPE_9__** %2, align 8
  %14 = call i64 @jsP_accept(%struct.TYPE_9__* %13, i8 signext 46)
  %15 = icmp ne i64 %14, 0
  br i1 %15, label %16, label %22

16:                                               ; preds = %8
  %17 = load i32, i32* @MEMBER, align 4
  %18 = load i32*, i32** %3, align 8
  %19 = load %struct.TYPE_9__*, %struct.TYPE_9__** %2, align 8
  %20 = call i32 @identifiername(%struct.TYPE_9__* %19)
  %21 = call i32* @EXP2(i32 %17, i32* %18, i32 %20)
  store i32* %21, i32** %3, align 8
  br label %8

22:                                               ; preds = %8
  %23 = load %struct.TYPE_9__*, %struct.TYPE_9__** %2, align 8
  %24 = call i64 @jsP_accept(%struct.TYPE_9__* %23, i8 signext 91)
  %25 = icmp ne i64 %24, 0
  br i1 %25, label %26, label %34

26:                                               ; preds = %22
  %27 = load i32, i32* @INDEX, align 4
  %28 = load i32*, i32** %3, align 8
  %29 = load %struct.TYPE_9__*, %struct.TYPE_9__** %2, align 8
  %30 = call i32 @expression(%struct.TYPE_9__* %29, i32 0)
  %31 = call i32* @EXP2(i32 %27, i32* %28, i32 %30)
  store i32* %31, i32** %3, align 8
  %32 = load %struct.TYPE_9__*, %struct.TYPE_9__** %2, align 8
  %33 = call i32 @jsP_expect(%struct.TYPE_9__* %32, i8 signext 93)
  br label %8

34:                                               ; preds = %22
  %35 = load %struct.TYPE_9__*, %struct.TYPE_9__** %2, align 8
  %36 = call i64 @jsP_accept(%struct.TYPE_9__* %35, i8 signext 40)
  %37 = icmp ne i64 %36, 0
  br i1 %37, label %38, label %46

38:                                               ; preds = %34
  %39 = load i32, i32* @CALL, align 4
  %40 = load i32*, i32** %3, align 8
  %41 = load %struct.TYPE_9__*, %struct.TYPE_9__** %2, align 8
  %42 = call i32 @arguments(%struct.TYPE_9__* %41)
  %43 = call i32* @EXP2(i32 %39, i32* %40, i32 %42)
  store i32* %43, i32** %3, align 8
  %44 = load %struct.TYPE_9__*, %struct.TYPE_9__** %2, align 8
  %45 = call i32 @jsP_expect(%struct.TYPE_9__* %44, i8 signext 41)
  br label %8

46:                                               ; preds = %34
  %47 = call i32 (...) @POPREC()
  %48 = load i32*, i32** %3, align 8
  ret i32* %48
}

declare dso_local i32* @newexp(%struct.TYPE_9__*) #1

declare dso_local i32 @SAVEREC(...) #1

declare dso_local i32 @INCREC(...) #1

declare dso_local i64 @jsP_accept(%struct.TYPE_9__*, i8 signext) #1

declare dso_local i32* @EXP2(i32, i32*, i32) #1

declare dso_local i32 @identifiername(%struct.TYPE_9__*) #1

declare dso_local i32 @expression(%struct.TYPE_9__*, i32) #1

declare dso_local i32 @jsP_expect(%struct.TYPE_9__*, i8 signext) #1

declare dso_local i32 @arguments(%struct.TYPE_9__*) #1

declare dso_local i32 @POPREC(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
